Fix problem with the task type filter not showing all of the tasks and containing duplicates.

--- a/styles/pages/_quick_assignment_report.scss
+++ b/styles/pages/_quick_assignment_report.scss
@@ -5,6 +5,7 @@
 
   .inline-filters{
     display: inline-block;
+    margin: 5px;
   }
 
   .workflow-block{
@@ -33,20 +34,23 @@
   }
   .task-activity-block{
     display: flex;
+    flex-direction: column;
+    align-content: stretch;
   }
   .task-instance{
     padding: 10px;
     position: relative;
     min-width: 150px;
+    height: 100%;
 
     .task-type{
       font-size: 18px;
       font-weight: 500;
     }
 
-   &:hover > .task-instance-tooltip {
-       display: block;
-   }
+    &:hover > .task-instance-tooltip {
+        display: block;
+    }
   }
 
   .empty-block-placeholder{
